--- a/app/src/main/res/layout/fragment_coupons.xml
+++ b/app/src/main/res/layout/fragment_coupons.xml
@@ -110,21 +110,23 @@
                 android:layout_gravity="left|bottom" />
         </FrameLayout>
 
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="vertical">-->
-            <!--<fragment-->
-                <!--class="com.google.android.gms.maps.MapFragment"-->
-                <!--android:id="@+id/miniMapView"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="120dp" />-->
-            <!--<EditText-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:editable="false"-->
-                <!--android:singleLine="true"/>-->
-        <!--</LinearLayout>-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <fragment
+                class="com.google.android.gms.maps.MapFragment"
+                android:id="@+id/couponMapView"
+                android:layout_width="match_parent"
+                android:layout_height="120dp" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="none"
+                android:text="tesssssssst"
+                android:textSize="25dp"
+                android:singleLine="true"/>
+        </LinearLayout>
 
 
     </LinearLayout>
