--- a/app/src/main/res/layout/fragment_coupons.xml
+++ b/app/src/main/res/layout/fragment_coupons.xml
@@ -96,10 +96,7 @@
             android:layout_height="220dp"
             android:id="@+id/couponView"
             android:background="@drawable/storephotoplacehoder">
-            <!--<ImageView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:src="@drawable/storephotoplacehoder"/>-->
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -133,52 +130,57 @@
 
         </FrameLayout>
 
-        <LinearLayout
+        <fragment
+            class="com.google.android.gms.maps.MapFragment"
+            android:id="@+id/couponMapView"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
 
-            <fragment
-                class="com.google.android.gms.maps.MapFragment"
-                android:id="@+id/couponMapView"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                />
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ffffff">
 
-            <HorizontalScrollView
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#ffffff">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/couponAddress"
-                    android:paddingTop="7dp"
-                    android:paddingBottom="7dp"
-                    android:paddingStart="10dp"
-                    android:paddingLeft="10dp"
-                    android:text="Waiting for data from server"
-                    android:textSize="20dp"
-                    android:singleLine="true"/>
-
-            </HorizontalScrollView>
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="4dp"
-                android:paddingBottom="4dp"
+                android:id="@+id/couponAddress"
+                android:paddingTop="7dp"
+                android:paddingBottom="7dp"
                 android:paddingStart="10dp"
                 android:paddingLeft="10dp"
-                android:text="Redeem"
+                android:text="Waiting for data from server"
                 android:textSize="20dp"
-                android:textStyle="bold"
-                android:textColor="#ffffff"
-                android:background="@color/red_btn_bg_color"
-                android:gravity="center"/>
-        </LinearLayout>
+                android:singleLine="true"/>
+
+        </HorizontalScrollView>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:paddingStart="10dp"
+            android:paddingLeft="10dp"
+            android:text="Redeem"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:background="@color/red_btn_bg_color"
+            android:gravity="center"/>
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_weight="5"-->
+            <!--android:orientation="vertical">-->
+
+            <!-- -->
+
+            <!-- -->
+        <!--</LinearLayout>-->
 
 
 
