--- a/app/src/main/res/layout/fragment_coupons.xml
+++ b/app/src/main/res/layout/fragment_coupons.xml
@@ -88,55 +88,64 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/couponResultLayout"
         android:orientation="vertical">
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="220dp"
-            android:id="@+id/couponView"
-            android:background="@drawable/storephotoplacehoder">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="left|bottom">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/couponViewTitle"
-                    android:paddingTop="5dp"
-                    android:paddingBottom="2dp"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="30dp"
-                    android:text="Waiting for data from server"
-                    android:textSize="20dp"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/couponViewDetail"
-                    android:paddingTop="2dp"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="30dp"
-                    android:text="Waiting for data from server"
-                    android:textSize="18dp"
-                    android:textStyle="bold"/>
-            </LinearLayout>
-
-        </FrameLayout>
-
-        <fragment
-            class="com.google.android.gms.maps.MapFragment"
-            android:id="@+id/couponMapView"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            />
+            android:orientation="vertical">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="6"
+                android:id="@+id/couponView"
+                android:background="@drawable/storephotoplacehoder">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="left|bottom">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/couponViewTitle"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="2dp"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="30dp"
+                        android:text="Waiting for data from server"
+                        android:textSize="20dp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/couponViewDetail"
+                        android:paddingTop="2dp"
+                        android:paddingBottom="10dp"
+                        android:paddingLeft="30dp"
+                        android:paddingRight="30dp"
+                        android:text="Waiting for data from server"
+                        android:textSize="18dp"
+                        android:textStyle="bold"/>
+                </LinearLayout>
+
+            </FrameLayout>
+            <fragment
+                class="com.google.android.gms.maps.MapFragment"
+                android:id="@+id/couponMapView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="5"
+                />
+        </LinearLayout>
+
+
 
         <HorizontalScrollView
             android:layout_width="match_parent"
@@ -171,16 +180,6 @@
             android:background="@color/red_btn_bg_color"
             android:gravity="center"/>
 
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp"-->
-            <!--android:layout_weight="5"-->
-            <!--android:orientation="vertical">-->
-
-            <!-- -->
-
-            <!-- -->
-        <!--</LinearLayout>-->
 
 
 
