--- a/app/src/main/res/layout/fragment_coupons.xml
+++ b/app/src/main/res/layout/fragment_coupons.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/couponWelcomeLayout"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="visible">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -90,7 +90,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/couponResultLayout"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
